@@ -136,6 +136,11 @@ const QString ctn_ARCHBANG_EDITOR(QStringLiteral("medit"));
 const QString ctn_ARCHBANG_FILE_MANAGER(QStringLiteral("spacefm"));
 
 const QString ctn_RXVT_TERMINAL(QStringLiteral("urxvt"));
+
+const QString ctn_GNOME_EDITOR(QStringLiteral("gedit"));
+const QString ctn_GNOME_FILE_MANAGER(QStringLiteral("nautilus"));
+const QString ctn_GNOME_TERMINAL(QStringLiteral("gnome-terminal"));
+
 const QString ctn_XFCE_DESKTOP(QStringLiteral("xfdesktop"));
 const QString ctn_XFCE_EDITOR(QStringLiteral("mousepad"));
 const QString ctn_XFCE_EDITOR_ALT(QStringLiteral("leafpad"));
